<resources>
    <string name="app_name">Godai</string>
    <string name="head_name">GO代</string>

    <!--login页面-->
    <string name="phone_or_username">请输入用户名</string>
    <string name="user80">用户名</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_pw">登录密码</string>
    <string name="register1">完成注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="destination">快递领取地</string>
    <string name="dormitory">宿舍地址</string>
    <string name="money">佣金</string>
    <string name="pub">发布任务</string>
    <string name="destination1">请输入快递领取地</string>
    <string name="dormitory1">请选择宿舍地址</string>
    <string name="money1">请输入悬赏的佣金</string>
    <string name="user1">用户名</string>
    <string name="status">状态</string>
    <string name="receive">领取任务</string>
    <string name="isreceive">确认收货</string>
    <string name="pub_username">发布任务者</string>
    <string name="re_username">领取任务者</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="drawer_closed">close</string>

    <!--个人信息页面-->
    <string name="nickname">昵称</string>
    <string name="user_type">用户类型</string>
    <string name="id">身份证</string>
    <string name="sex">性别</string>
    <string name="phone">手机号码</string>
    <string name="user_typed">用户类型</string>
    <string name="school">学校</string>


</resources>
