<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pad3"
        android:layout_marginRight="@dimen/pad3"
        android:background="@drawable/corner_round"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/destination"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/destination1"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/dormitory"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/dormitory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/dormitory1"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/money"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/money1"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/pub"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spa72"
        android:layout_marginLeft="@dimen/pad3"
        android:layout_marginRight="@dimen/pad3"
        android:layout_marginTop="@dimen/pad3"
        android:background="@drawable/blue_button_background_selector"
        android:text="@string/pub"
        android:textColor="#fafafa"
        android:textSize="@dimen/f21" />

</LinearLayout>