<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="6dp"
    android:clickable="true"
    android:background="#ffff"
    android:foreground="?android:attr/selectableItemBackground"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/pub_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/re1_destination1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"/>
        <TextView
            android:id="@+id/re1_dormitory1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re1_destination1"
            android:text="@string/dormitory"/>
        <TextView
            android:id="@+id/re1_money1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re1_dormitory1"
            android:text="@string/money"/>
        <TextView
            android:id="@+id/pub_user1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re1_money1"
            android:text="@string/pub_username"/>
        <TextView
            android:id="@+id/re_user1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pub_user1"
            android:text="@string/re_username"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re_user1"
            android:text="@string/status"/>

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/re1_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>
        <TextView
            android:id="@+id/re1_dormitory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re1_destination"
            android:text=""/>

        <TextView
            android:id="@+id/re1_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/re1_dormitory"
            android:text=""/>

            <TextView
                android:id="@+id/re1_pub_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re1_money"
                android:text=""/>

            <TextView
                android:id="@+id/re1_re_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re1_pub_user"
                android:text=""/>
            <TextView
                android:id="@+id/re1_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re1_re_user"
                android:text=""/>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/pub_item_title">

        <Button
            android:id="@+id/assignment_isreceive"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/isreceive"
            android:textColor="@color/cor4"
            android:background="@drawable/green_button_background_selector"/>
    </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>