<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/pad3"
        android:layout_marginRight="@dimen/pad3"
        android:background="@drawable/corner_round"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/username"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/re_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/phone_or_username"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/password"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/re_login_paw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="6-12位推荐组合型密码"
                android:password="true"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/sex"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/re_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="男或女"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/id"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/re_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="18位身份证号码，成为快递员必填"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/phone"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/re_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="11位手机号码，成为快递员必填"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/pad3"
                android:layout_marginRight="2dp"
                android:text="@string/school"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/f21" />

            <EditText
                android:id="@+id/re_school"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="就读学校"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/colorhint"
                android:textSize="@dimen/f21" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor" />

    </LinearLayout>

    <Button
        android:id="@+id/register_and_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spa72"
        android:layout_marginLeft="@dimen/pad3"
        android:layout_marginRight="@dimen/pad3"
        android:layout_marginTop="@dimen/pad3"
        android:background="@drawable/blue_button_background_selector"
        android:text="@string/register1"
        android:textColor="#fafafa"
        android:textSize="@dimen/f21" />

</LinearLayout>