<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spa74"
        android:background="@color/cor1"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_labletext1"
                style="@style/normal_Labletextstyle"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:text="@string/head_name"
                android:textSize="18sp" />

            <TextView
                style="@style/normal_Labletextstyle"
                android:layout_alignBottom="@+id/tv_labletext1"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@+id/tv_labletext1"
                android:text="Android"
                android:textSize="@dimen/f16" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_phoneRegister"
        style="@style/normal_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/corner_round"
        android:lineSpacingExtra="3dp"
        android:padding="9dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/corner_round"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/account"
            android:hint="@string/phone_or_username"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/colorhint"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#cccccc"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/passwowrd"
            android:hint="@string/login_pw"
            android:password="true"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/colorhint"
            android:textSize="15sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_savedpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:background="@null"
        android:button="@null"
        android:drawableLeft="@drawable/checkbox_backgound_selector"
        android:drawablePadding="2dp"
        android:text="@string/autoLogin"
        android:textColor="@color/textcolor"
        android:checked="false" />

    <LinearLayout
        style="@style/screen_margin_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:layout_weight="1"
            android:background="@drawable/blue_button_background_selector"
            android:text="@string/register"
            android:textColor="@color/cor4" />

        <View
            android:layout_width="@dimen/pad4"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spa72"
            android:layout_weight="1"
            android:background="@drawable/green_button_background_selector"
            android:text="@string/login"
            android:textColor="@color/cor4" />
    </LinearLayout>

</LinearLayout>